Selection Tookit package v1/retrieveOutput/objects/Interview_Section_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Anchor_Assessor__c</fullName>
        <label>Anchor Assessor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessor__c</fullName>
        <label>Assessor</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competency__c</fullName>
        <label>Competency</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Anchor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Anchor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intro__c</fullName>
        <label>Intro</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Interview Section Settings</label>
</CustomObject>